--- a/Sem04/IWT/online_book_store/styles.css
+++ b/Sem04/IWT/online_book_store/styles.css
@@ -1,9 +1,7 @@
 html {
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.table-image-center {
-  text-align: center;
+  background-image: url(./images/old-pgae.jpg);
+  color: #ffffff;
 }
 
 body {
@@ -11,110 +9,47 @@ body {
   margin: 0 auto;
 }
 
+a {
+  color: #dddddd;
+}
+
+a:hover {
+  color: #00aaff;
+}
+
+a:hover:visited {
+  color: #00aaff;
+}
+
+a:visited {
+  color: #99ddff;
+}
+
+.table-image-center {
+  text-align: center;
+}
+
+
 table {
   width: 100%;
-  color: #000000;
+  color: #ffffff;
 }
+
 th {
   color: white;
 }
+
 th,
 td {
   padding: 10px;
   text-align: left;
   border-bottom: 1px solid white;
 }
+
 th {
   background-color: black;
 }
-.button {
-  background-color: #00aaff;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 15px;
-}
-.special {
-  background-color: #000000;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 15px;
-}
 
-.button-19 {
-  appearance: button;
-  background-color: #1899d6;
-  border: solid transparent;
-  border-radius: 16px;
-  border-width: 0 0 4px;
-  box-sizing: border-box;
-  color: #ffffff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: din-round, sans-serif;
-  font-size: 15px;
-  font-weight: 700;
-  letter-spacing: 0.8px;
-  line-height: 20px;
-  margin: 0;
-  outline: none;
-  overflow: visible;
-  padding: 13px 16px;
-  text-align: center;
-  text-transform: uppercase;
-  touch-action: manipulation;
-  transform: translateZ(0);
-  transition: filter 0.2s;
-  user-select: none;
-  -webkit-user-select: none;
-  vertical-align: middle;
-  white-space: nowrap;
-  width: 20%;
-}
-
-.button-19:after {
-  background-clip: padding-box;
-  background-color: #1cb0f6;
-  border: solid transparent;
-  border-radius: 16px;
-  border-width: 0 0 4px;
-  bottom: -4px;
-  content: "";
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: -1;
-}
-
-.button-19:main,
-.button-19:focus {
-  user-select: auto;
-}
-
-.button-19:hover:not(:disabled) {
-  filter: brightness(1.1);
-  -webkit-filter: brightness(1.1);
-}
-
-.button-19:disabled {
-  cursor: auto;
-}
-
-.button-19:active {
-  border-width: 4px 0 0;
-  background: none;
+button {
+  font-size: x-large;
 }
